# Windowutil

./: .build_state.json  .gitignore  .windowutil_state.json  animations.py  build.py  config.ini  config.py  debugutils.py  interpreter.py  loader.py  manifest.json  newoldmanifest.json  oldmanifest.json  pyproject.toml  settings.json  state.py  update.json  version.json  windowutil.py  wutil.py  wutilerror.py
extensions/: __innit__.py  centre.py  help.py  install.py  nudge.py  resize.py  select.py  term.py  update.py
