[project]
name = "windowutil"
version = "1.08"
description = "A very extensible utility to move windows around the screen"
authors = [
    {name = "Philadner"}
]
license = {text = "GPLv3"}
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pyautogui (>=0.9.54,<0.10.0)",
    "pywinctl (>=0.4.1,<0.5.0)",
    "pywin32 (>=311,<312)",
    "keyboard (>=0.13.5,<0.14.0)",
    "psutil (>=7.1.2,<8.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pyinstaller (>=6.16.0,<7.0.0)",
    "colorama (>=0.4.6,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
